--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Grant execute permission to gradlew
+      run: chmod +x ./JavaDBstudying/PeopleDB/gradlew
     - name: Build with Gradle
       run: ./gradlew build --no-daemon
       working-directory: /home/runner/work/JavaDBstudying/JavaDBstudying/PeopleDB
