--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,12 +22,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up latest JDK
+    - name: Set up JDK 18
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '18'
+        distribution: 'adopt@1.8'
+
     - name: Grant execute permission to gradlew
       run: chmod +x ./PeopleDB/gradlew
     - name: Build with Gradle
