--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '18'
-        distribution: 'adopt@1.8'
+        distribution: 'adoptium'
 
     - name: Grant execute permission to gradlew
       run: chmod +x ./PeopleDB/gradlew
