Update gradle.yml  Set up JDK 18

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,10 +23,10 @@ jobs:
 
     steps:
     - name: Set up JDK 18
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v3.1.1
       with:
         java-version: '18'
-        distribution: 'adoptium'
+        distribution: 'adopt'
 
     - name: Grant execute permission to gradlew
       run: chmod +x ./PeopleDB/gradlew
