--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
+    - name: List files in PeopleDB directory
+      run: ls ./PeopleDB
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3.1.1
       with:
