--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     
     - name: List files in PeopleDB directory
-      run: ls ./PeopleDB
+      run: ls
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3.1.1
