--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,8 +23,7 @@ jobs:
 
     steps:
     
-    - name: List files in PeopleDB directory
-      run: ls
+    - uses: actions/checkout@v3
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3.1.1
